Updated running.tex, finished kernel.tex, made comp_removed.tex having a component abstract as tables. Few changes in other files. Made build work with the makeindex.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@16 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -51,7 +51,7 @@ The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and pro
 \label{s:new-features:run-time}
 \index{Library!Run-time}
 
-Some important modifications were done to the 'Run-time' library (e.g. the functions used in the instrument program). Some details may be found in sections~\ref{s:comp-finally} and \ref{} as well as in appendix~\ref{c:kernelcalls}.
+Some important modifications were done to the 'Run-time' library (e.g. the functions used in the instrument program). Some details may be found in sections~\ref{s:comp-save} as well as in the appendix~\ref{c:kernelcalls}.
 
 \begin{itemize}
 \item A global gravitation handling is now available, by setting the \verb+-g+ flag.
