--- a/trunk/datablad_comp.tex
+++ b/trunk/datablad_comp.tex
@@ -61,7 +61,7 @@ Telefax +45 4677 4013
 \forfatter{Peter Kj\ae r Willendrup, Kim Lefmann, Emmanuel Farhi}
 \isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
-\dato{October 2003}
+\dato{\reldate}
 \regnummer{---}
 \projektnummer{---}
 \sider{\thepage}\tabeller{2}\figurer{15}\referencer{10}
