--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -24,7 +24,7 @@ which may ease the task of writing component and instrument definitions.
   includes gravity using the acceleration $(Ax,Ay,Az)$. In addition,
   to adjusting $(x,y,z)$ and $t$ also $(vx,vy,vz)$ is modified.
 \item {\bf SCATTER}. This macro is used to denote a scattering event
-  inside a component, see section~\ref{s:TRACE}.
+  inside a component, see section~\ref{s:comp-trace}.
 \end{itemize}
 
 \subsection{Meta-language extensions}
