--- a/trunk/risoe-rep-title.tex
+++ b/trunk/risoe-rep-title.tex
@@ -40,6 +40,6 @@
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Per-Olof {\AA}strand, Kim Lefmann, Emmanuel Farhi\\ and Kristian Nielsen}
+\author{Kim Lefmann, Peter Willendrup, Emmanuel Farhi\\ Mark Hagen, Per-Olof {\AA}strand, and Kristian Nielsen}
 \maketitle
 \endgroup
