--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -42,6 +42,7 @@
 
 \newcommand{\MCS}{{McStas}}
 \newcommand{\version}{{1.7}}
+\newcommand{\reldate}{{May 15th, 2003}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 %\title{Component manual\\ to the neutron ray-tracing package
