--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -1,4 +1,4 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
+2% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 {% Make all definitions local.
 
@@ -61,7 +61,7 @@ Telefax +45 4677 4013
 \forfatter{Per-Olof \AA strand, Kim Lefmann, Emmanuel Farhi, Kristian Nielsen}
 \isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
-\dato{October 2001}
+\dato{\reldate}
 \regnummer{---}
 \projektnummer{---}
 \sider{\thepage}\tabeller{2}\figurer{15}\referencer{10}
