--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -44,6 +44,7 @@
 
 \newcommand{\MCS}{{McStas}}
 \newcommand{\version}{{1.7}}
+\newcommand{\reldate}{{May 15th, 2003}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
